Fix job state shrink issue when job name is too long

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/dashboard/stage_overview/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/dashboard/stage_overview/index.scss
@@ -218,6 +218,7 @@ $building: #ffc11b;
 }
 
 .unknown {
+  min-width: 18px;
   background: transparent url('../../../../app/assets/images/building.gif') repeat-x;
 }
 
